# setup

./: README.md  READme.md  arch_setup.md  i3  planned.md  rose-pine-rice.md  tmux.conf  vscode_config.md
distro/: arch_setup.md
gnome/: extentions.txt
i3/: READme.md
scripts/: .gitignore  Cargo.toml  READms.md  text.txt
scripts/src/: change_theme.rs  fix_json.rs  gtk_theme.rs  install.rs  install.sh  random_theme.rs  templating.rs
scripts/templates/: alacritty.toml  alacritty.yml  bar_config  catppuccin-mocha.tmuxtheme  colors  colors.ini  config.kdl  dmenu  dwm  json.json  rofi.rasi  st
scripts/themes/active/: active.json  alacritty.yml  bar_config  colors  colors.ini  rofi.rasi  wallpaper
scripts/themes/favs/: j_ayu_dark.json  j_gooey.json  j_morada.json  p_banana_blueberry.json  p_duckbones.json  p_laser.json  p_seashells.json  p_shaman.json
scripts/themes/json/: 3024 Day.json  3024 Night.json  Abernathy.json  Adventure.json  Afterglow.json  Alabaster.json  AlienBlood.json  Apple Classic.json  Argonaut.json  Batman.json  Belafonte Day.json  Belafonte Night.json  BirdsOfParadise.json  Blazer.json  Blue Matrix.json  BlueBerryPie.json  BlueDolphin.json  BlulocoDark.json  BlulocoLight.json  Borland.json  Breeze.json  Builtin Pastel Dark.json  Builtin Solarized Dark.json  Builtin Tango Light.json  C64.json  Calamity.json  Chalk.json  Chester.json  Cobalt2.json  Darkside.json  Desert.json  DjangoRebornAgain.json  DoomOne.json  DotGov.json  Dracula+.json  Dracula.json  ENCOM.json  Earthsong.json  Elemental.json  Espresso Libre.json  (+493 more)
src/: main.rs
(+146 files in other folders)
