[package]
name = "setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "gtk_theme"
path = "src/gtk_theme.rs"

[[bin]]
name = "install"
path = "src/install.rs"

[[bin]]
name = "fix_json"
path = "src/fix_json.rs"

[[bin]]
name = "templating"
path = "src/templating.rs"


[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
handlebars = "4.3.7"